# aoc

./: .gitignore  README.md  download  download_all  go.mod  go.sum
01/: Makefile  main.go
02/: out1  part1  part1.go  part2  part2.go
04/: Makefile
05/: Makefile
19/: Makefile
archive/y2015/: Cargo.toml  Makefile
archive/y2015/src/: lib.rs
c/: dev  shared_2015.h
c/y2015/: bench  d01.c  d02.c  d03.c  d04.c  d05.c  d06.c  skeleton.c
go/y2016/: bench.gp  bench.sh  day01.go  day01_test.go  day02.go  day02_test.go  day03.go  day03_test.go  day04.go  day04_test.go  day05.go  day05_test.go  day06.go  day06_test.go  day07.go  day07_test.go  day08.go  day08_test.go  day09.go  day09_test.go  go.mod  main.go  main_test.go  new.sh  run.sh  test.sh
scripts/: Makefile  README.md  aoc_input  input  main.go
y2015/: .gitignore  Cargo.toml  ChangeLog.md  README.md  build.zig  package.yaml
y2015/d01/: main.zig
y2015/src/: d01.zig  day01.rs  day02.rs  day03.rs  day04.rs  day1.rs  main.zig  temp.rs  temp.zig  utils.zig
y2019/: LICENSE  README.md  go.mod  go.sum
y2019/d02/: part2.go
y2019/d03/: out1  part1.go
y2019/d04/: input  part1.awk  part2.go
y2019/d05/: IntCode.go  Makefile  part1.go
y2019/d06/: part1.go  part1.graph.go
y2019/d07/: Makefile  part1.IntCode.go  part1.go  part2.IntCode.go  part2.go
y2019/d08/: out  part1.go  t.go
y2020/: .gitignore  newday
y2021/: Makefile  get-input
y2022/: aoc.py  d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  main.py  temp.py
(+193 files in other folders)
