[package]
name = "y2015"
version = "0.1.0"
authors = ["Joseph Hines <jthines3@gmail.com>"]
edition = "2018"
default-run = "y2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "*"
itertools = "0.9"
regex = "1.4"
once_cell = "1.5"
